--- a/src/style/style.css
+++ b/src/style/style.css
@@ -3,6 +3,7 @@ body {
   font-size: 14px;
   color: var(--cp-text1);
   margin: 0;
+  padding: 0;
 }
 a {
   color: var(--cp-text2);
@@ -11,3 +12,4 @@ h1,h2,h3,h4,h5,h6,p,ul,ol {
   margin: 0;
   padding: 0;
 }
+
